--- a/1-SASS/2-layouts/_layouts.sass
+++ b/1-SASS/2-layouts/_layouts.sass
@@ -1,8 +1,179 @@
+.navbar
+	background: linear-gradient(180deg, rgba(0,0,0,0.8), rgba(0,0,0,0))
+	+media(md)
+		justify-content: center
+	.navitem
+		+font(Gothamrounded, 700, 16px, $white, 2.4px, uppercase)
+		text-align: center
+		margin-bottom: 10px
+		+media(md)
+			margin: auto 40px
+	.navbar-toggler
+		margin-top: 20px
+		border: none
+		align-self: flex-start
+		order: 1
+	.navbar-brand
+		align-self: flex-start
+		&.primary
+			display: none
+			+media(md)
+				display: block
+				margin: 0 100px
+				width: 70px
+		&.secondary
+			+media(md)
+				display: none
+				opacity: 0
+
 .hero
-	background: url("../../images/hero-1.jpg") no-repeat center
+	background: url("../images/hero-1.jpg") no-repeat center
 	background-size: cover
 	height: 100vh
+	+media(md)
+		height: 745px
 	.hero-content
 		+font()
 		text-align: center
+	.btn
+		width: 166px
+		height: 49px
+		border-radius: 3px
+	
+.section-1
+	background: $background-white
+	padding-top: 30px
+	padding-bottom: 30px
+	overflow: hidden
+	+media(md)
+		padding: 92px 0 113px
+	p
+		margin: 49px 0 47px
+	.btn
+		@extend %section-button
+	.relative
+		+media(md)
+			position: relative
+	.handphone-photo
+		max-height: 100vw
+		max-width: 100vw
+		+media(md)
+			position: absolute
+			top: 15px
+			right: 0
+
+.section-2
+	.article
+		background: $white
+		padding-top: 30px
+		padding-bottom: 30px
+		p
+			margin: 44px 0 42px
+		.btn
+			@extend %section-button
+		+media(md)
+			padding-top: 160px
+			padding-bottom: 160px
+	.phone-1-wrapper
+		margin-top: 30px
+		background: url("../images/phone-1.png") no-repeat
+		background-size: 90%
+		background-position: center top
+		height: 250px
+		width: 90%
+		+media(md)
+			background-size: 100%
+			height: inherit
+			margin-top: 160px
+
+.section-3
+	background: $background-white
+	padding-top: 30px
+	padding-bottom: 30px
+	+media(md)
+		padding: 120px 0
+	.article
+		text-align: center
+		h2
+			margin: 31px 0 24px
+	img
+		max-width: 100%
+
+.section-4
+	background: url("../images/hero-2.jpg") no-repeat center
+	background-size: cover
+	height: 100vh
+	+font()
+	text-align: center
+	+media(md)
+		height: 790px
+	h1
+		margin-bottom: 34px
+	.form-control
+		letter-spacing: 2.4px
+		color: $grey
+		max-width: 280px
+		height: 60px
+	.input-group-text
+		width: 63px
+		height: 60px
+		font-size: 2em
+
+.input-group-text
+	color: $white
+	background: $turquoise
+	border: none
+	justify-content: center
+
+.section-5
+	background: $background-white
+	padding-top: 30px
+	padding-bottom: 30px
+	+media(md)
+		padding: 90px 0 115px
+	.content
+		text-align: center
+		h2
+			+font(Gothamrounded, 700, 20px, $grey, 3px, uppercase)
+			margin-bottom: 16px
+		p
+			+font(Gothamrounded, 500, 12px, $grey, 1.8px, uppercase)
+			line-height: 22px
+	button
+		background: $turquoise-light
+		text-align: left
+		padding-left: 30px
+	.input-group
+		margin-bottom: 10px
+		max-width: 296px
+		height: 56px
+		+media(md)
+			margin-top: 47px
+	.input-group-text
+		width: 56px
+		height: 56px
+		font-size: 2em
+
+.footer
+	+font(Gothamrounded, 700, 14px, $grey, 2.1px, uppercase)
+	padding: 45px 0 35px
+	text-align: center
+
+.footer-text
+	+media(md)
+		text-align: left
+	span
+		color: $turquoise
+		margin: 0 4px
+	p:last-child
+		text-transform: none
+
+.footer-icon
+	text-align: center
+	+media(md)
+		text-align: right
+
+
+
+
 
