--- a/1-SASS/_variables.sass
+++ b/1-SASS/_variables.sass
@@ -10,5 +10,16 @@ $h2-font: Gothamrounded, 700, 18px, $turquoise, 2.7px, uppercase
 $p-font: Gothamrounded Book, 300, 12px, $grey, 2.4px, none
 $footer-font: Gothamrounded, 700, 14px, $grey, 2.1px, uppercase
 
+$breakpoint-xs: 0
+$breakpoint-sm: 576px
+$breakpoint-md: 768px
+$breakpoint-lg: 992px
+$breakpoint-xl: 1200px
+
+%section-button
+	width: 192px
+	height: 51px
+	border-radius: 3px
+	float: right
 
 
